<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/post_type"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <RadioGroup
            android:id="@+id/selection_type"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/Lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="lost"/>
            <RadioButton
                android:id="@+id/Found"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="found"/>

        </RadioGroup>
    </LinearLayout>


    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/edit_name"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/edit_phone"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/edit_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/edit_date"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_style"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/edit_location"
        android:inputType="text" />
    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="Get Current Location" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="save" />


</LinearLayout>